--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,54 @@
-.App {
+
+
+form{
+  padding:1rem;
+  display:flex;
+  flex-direction: column;
+  gap:1rem;
+  max-width: 70vmin;
+  min-width: 65vmin;
+  
+}
+h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+label{
+  padding:0.2rem;
+}
+.containers
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+
+
+
+
+
+
+
+
+
+
+/* .App-logo {
+  height: 40vh;
+
+  
+
+}
+
+
+  .App-logo{
+    animation: App-logo-spin infinite 10s ease-in-out ;
   }
-}
+
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,9 +64,11 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+  
+	transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    
+	transform: rotate(360deg);
   }
-}
+} */
